Fixed the white gap at right hand side of body.

--- a/wwwroot/sass/index.scss
+++ b/wwwroot/sass/index.scss
@@ -8,6 +8,10 @@
 @import 'partials/_section-sponsors.scss';
 @import 'partials/_footer.scss';
 
+html, body{
+    overflow-x: hidden;
+}
+
 ol, ul {
     list-style: none;
 }
